style.css
body {
    background-color: #12121a;
    font-family: 'serifboy', serif;
    color: #91919a;
    font-size: 1.35em;
    line-height: 1.1em;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0;
}

@font-face {
    font-family: 'serifboy';
    src: url('fonts/serifboy.eot');
    src: url('fonts/serifboy.eot?#iefix') format('embedded-opentype'), url('fonts/serifboy.woff2') format('woff2'), url('fonts/serifboy.woff') format('woff'), url('fonts/serifboy.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}


h1 {
    margin-block: 0;
    margin-bottom: 0.25em;
    font-weight: normal;
    font-style: normal;
}

h2 {
    font-size: .86em;
}

p {
    margin: 0 0 0.75em 0;
}

a {
    color: unset;
}

a:link {
    text-decoration: none;
}

a:hover {
    text-decoration: underline;

}

img {
    max-width: 100%;
    vertical-align: middle;
    display: inline-block;
    border: 0;
}

.footer-container {
    justify-content: center;
    align-items: center;
    padding: 4em;
    display: flex;
}

.footer-logo {
    height: 2em;
}

.bye-mrg {
    margin-bottom: 0;
}

.text-sans {
    font-family: 'Archivo', sans-serif;
    font-weight: 400;
    font-style: normal;
}

.small {
    font-size: 0.66em;
    line-height: 1.1em;
}

.page-container {
    display: flex;
    flex-direction: column;
    align-content: stretch;
    gap: 6em;
    width: 100%;
    max-width: 1650px;
}

.section-container {
    display: flex;
    flex-direction: column;
    gap: 6em;
}

.nav-container {
    grid-column-gap: 1em;
    grid-row-gap: 1em;
    grid-row-gap: 0px;
    justify-content: space-between;
    align-items: flex-start;
    padding: 1em;
    display: flex;
}

.nav-block {
    width: 40%;
    grid-column-gap: 1em;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
    display: flex;
}


.nav-link-block {
    grid-column-gap: 1em;
    justify-content: flex-end;
    align-items: flex-start;
    font-family: Archivo, sans-serif;
    font-size: .66em;
    line-height: 1.1em;
    text-decoration: none;
    display: flex;
}

.grid-12 {
    width: 100%;
    max-width: 100%;
    display: grid;
    grid-template-rows: auto;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
}

.grid-block {
    padding: 1em;
    width: 100%;
}

.bottom {
    align-self: end;
}

.logo-container {
    pointer-events: none;
    z-index: 1;
    background-image: linear-gradient(#12121a, #12121a 0%, rgba(18, 183, 26, 0));
    padding: 1em;
    position: sticky;
    top: 0;
    left: 0;
    right: 0;
    display: flex;
    flex-direction: column;
    align-items: stretch;
}

.logo {
    width: 100%;
}

.album-nav-container {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
    gap: 1em;
    position: relative;
    top: 0;
}

.album-nav-art-container {
    width: 100%;
    display: grid;
    flex-direction: column;
    gap: 0;
    grid-template-rows: auto auto;
    grid-template-columns: 1fr 1fr 1fr 1fr;
}

.album-nav-art-block {
    width: 100%;
    flex: none;
    padding-top: 50%;
    padding-bottom: 50%;
    position: relative;
    overflow: hidden;
    max-width: 100%;
}

.image-absolute {
    width: 100%;
    height: 100%;
    object-fit: cover;
    position: absolute;
    top: 0%;
    bottom: 0%;
    left: 0%;
    right: 0%;
}

.album-page-nav-container {
    justify-content: space-between;
    align-items: flex-start;
    padding: 1em;
    display: flex;
    position: fixed;
    top: 0%;
    bottom: auto;
    left: 0%;
    right: 0%;
}

#modal-container {
    display: none;
    z-index: 100;
    background-color: #12121a;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    padding: 1em 1em 4em;
    position: fixed;
    top: 0%;
    bottom: 0%;
    left: 0%;
    right: 0%;
    color: #91919a;
}

.modal-nav {
    width: 100%;
    max-width: 1650px;
    flex-direction: column;
    display: flex;
    position: relative;
}

.modal-links-container {
    width: 100%;
    max-width: 1650px;
    grid-column-gap: 1em;
    grid-row-gap: 0px;
    grid-template-rows: auto;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-auto-columns: 1fr;
    display: grid;
}

.modal-link-block {
    width: 100%;
    grid-row-gap: 1em;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    display: flex;
}

.modal-link-img {
    width: 3em;
    height: 3em;
}

.modal-title {
    pointer-events: none;
    width: 100%;
    position: absolute;
    top: 0%;
    bottom: auto;
    left: 0%;
    right: 0%;
}

.album-page-title {
    height: 36px;
    width: 100%;
}

.album {
    margin-top: 8em;
    padding: 1em;
    gap: 0;
}

.album-art {
    width: 100%;
}

.album-emphasis {
    font-family: Archivo, sans-serif;
    font-size: .95em;
    margin-bottom: 0;
}

.album-text {
    text-indent: 8vw;
    font-size: 2em;
    line-height: 1em;
}

.album-listen-links {
    grid-column-gap: .5em;
    align-items: center;
    display: flex;
}

.grid-art-block {
    padding: 0;
    width: 100%;
}

@media only screen and (max-width: 480px) {
    .page-container {
        grid-row-gap: 2em;
    }

    .nav-container {
        flex-direction: column;
    }

    .nav-block {
        width: auto;
    }

    .album-nav-art-container {
        grid-template-columns: 1fr 1fr;
    }

    .album-text {
        font-size: 1.1em;
    }
}

